--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -2,3 +2,8 @@ default_id=사용자
 title=ScheduleMaster
 connection_fail=서버와 연결할 수 없습니다.
 disconnection_fail=Failed to disconnect
+logout=로그아웃
+login=로그인
+id=아이디
+pw=비밀번호
+signup=회원가입
