--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -11,3 +11,14 @@ error=오류
 info=정보
 succeed=성공!
 failed=실패
+wrong_password=비밀번호가 잘못되었습니다.
+id_not_found=아이디를 찾을 수 없습니다.
+wrong_request=잘못된 요청입니다.
+id_is_empty=아이디를 입력해주세요.
+id_exists=이미 사용중인 아이디입니다.
+already_enrolled=이미 신청되었습니다.
+conflict=이미 신청한 다른 강의와 시간이 겹칩니다.
+lecture_full=정원이 가득 찼습니다.
+already_selected=이미 담은 강의입니다.
+not_enrolled=신청되지 않은 강의입니다.
+not_selected=책가방에 담지 않은 강의입니다.
