--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -22,3 +22,4 @@ lecture_full=정원이 가득 찼습니다.
 already_selected=이미 담은 강의입니다.
 not_enrolled=신청되지 않은 강의입니다.
 not_selected=책가방에 담지 않은 강의입니다.
+session_exists=다른 곳에서 로그인 중입니다.
