--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -39,3 +39,8 @@ enroll=신청
 select=담기
 cancel=취소
 unselect=빼기
+preview_label=미리보기
+select_btn=선택
+next_btn=다음
+previous_btn=이전
+no_available_schedule=가능한 시간표가 없습니다.
