--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -43,8 +43,8 @@ preview_label=미리보기
 select_btn=선택
 next_btn=다음
 previous_btn=이전
-no_available_schedule=가능한 시간표가 없습니다.
-reduplication=중복되는 강의가 있습니다.
+no_available_schedule="가능한 시간표가 없습니다."
+reduplication="중복되는 강의가 있습니다."
 professor=교수명
 lecture_name=강의명
 major=전공
