Group delete, Translation.

--- a/app/src/main/resources/string_ja.properties
+++ b/app/src/main/resources/string_ja.properties
@@ -3,8 +3,8 @@ default_id=利用者
 connection_fail=サーバーに接続できません.
 disconnection_fail=切断に失敗しました。
 logout=ログアウト
-login=&ログイン
-id=&ID
+login=ログイン
+id=ID
 pw=パスワード
 signup=会員加入
 error=誤謬
@@ -51,3 +51,7 @@ major=専攻
 suggest_check_box=推薦
 grade=学年
 toggle_theme=テーマ変更
+group=グループ
+commit=作成
+already_committed=すでに評価しています。
+delete_group=グループの削除
