--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -4,9 +4,9 @@ connection_fail=서버와 연결할 수 없습니다.
 disconnection_fail=연결을 끊지 못했습니다.\
 
 logout=로그아웃
-login=&로그인
-id=&아이디
-pw=&비밀번호
+login=로그인
+id=아이디
+pw=비밀번호
 signup=회원가입
 error=오류
 info=정보
@@ -55,3 +55,5 @@ toggle_theme=테마 변경
 commit=작성
 already_committed=이미 평가했습니다.
 remove_my_rating=내 평가 지우기
+group=그룹
+delete_group=그룹 삭제
