--- a/app/src/main/resources/string_vi.properties
+++ b/app/src/main/resources/string_vi.properties
@@ -3,9 +3,9 @@ default_id=người sử dụng
 connection_fail=Không thể kết nối với máy chủ.
 disconnection_fail=Không thể ngắt kết nối được.
 logout=Đăng xuất
-login=&đăng nhập
-id=&ID
-pw=&mở khóa mật khẩu
+login=đăng nhập
+id=ID
+pw=mở khóa mật khẩu
 signup=gia nhập hội viên
 error=sai
 info=Thông tin
@@ -52,3 +52,7 @@ suggest_check_box=sự giới thiệu
 grade=niên học
 toggle_theme=thay đổi bầu không khí
 no_available_schedule=Không có thời gian biểu có thể làm được.
+group=tập đoàn
+commit=viết
+already_committed=Đã được xếp hạng.
+delete_group=xóa nhóm
