--- a/app/src/main/resources/string_zh.properties
+++ b/app/src/main/resources/string_zh.properties
@@ -51,3 +51,7 @@ major=\u4E13\u653B
 suggest_check_box=\u63A8\u8350
 grade=\u5B66\u5E74
 toggle_theme=\u66F4\u6539\u4E3B\u9898
+group=团体
+commit=写
+already_committed=已经评分了
+delete_group=删除群组
