--- a/app/src/main/resources/string_ja.properties
+++ b/app/src/main/resources/string_ja.properties
@@ -55,3 +55,16 @@ group=グループ
 commit=作成
 already_committed=すでに評価しています。
 delete_group=グループの削除
+lecture_num=講義番号
+score=クレジット
+lecture_time=講義時間
+room=講義室
+enrolled_num=申請者
+max=最大
+period=教示
+mon=月曜日
+tue=火曜日
+wed=水曜日
+thu=木曜日
+fri=金曜日
+sat=土曜日
