--- a/app/src/main/resources/string_ko.properties
+++ b/app/src/main/resources/string_ko.properties
@@ -57,3 +57,16 @@ already_committed=이미 평가했습니다.
 remove_my_rating=내 평가 지우기
 group=그룹
 delete_group=그룹 삭제
+lecture_num=강의 번호
+score=학점
+lecture_time=강의 시간
+room=강의실
+enrolled_num=신청자
+max=최대
+period=교시
+mon=월요일
+tue=화요일
+wed=수요일
+thu=목요일
+fri=금요일
+sat=토요일
