--- a/app/src/main/resources/string_vi.properties
+++ b/app/src/main/resources/string_vi.properties
@@ -56,3 +56,16 @@ group=tập đoàn
 commit=viết
 already_committed=Đã được xếp hạng.
 delete_group=xóa nhóm
+lecture_num=bài giảng số
+score=lớp
+lecture_time=giờ giảng
+room=phòng học
+enrolled_num=người xin việc
+max=tối đa
+period=Giai đoạn
+mon=thứ hai
+tue=Thứ ba
+wed=Thứ Tư
+thu=thứ năm
+fri=thứ sáu
+sat=Thứ bảy
