--- a/app/src/main/resources/string_zh.properties
+++ b/app/src/main/resources/string_zh.properties
@@ -55,3 +55,16 @@ group=团体
 commit=写
 already_committed=已经评分了
 delete_group=删除群组
+lecture_num=讲座编号
+score=等级
+lecture_time=上课时间
+room=讲堂
+enrolled_num=申请人
+max=最大
+period=时期
+mon=周一
+tue=周二
+wed=周三
+thu=周四
+fri=星期五
+sat=周六
